tests/baselines/reference/validEnumAssignments.errors.txt
validEnumAssignments.ts(20,1): error TS2322: Type 'number' is not assignable to type 'E'.
validEnumAssignments.ts(26,1): error TS2322: Type '-1' is not assignable to type 'E'.


==== validEnumAssignments.ts (2 errors) ====
    enum E {
        A,
        B
    }
    
    var n: number;
    var a: any;
    var e: E;
    
    n = e;
    n = E.A;
    
    a = n;
    a = e;
    a = E.A;
    
    e = e;
    e = E.A;
    e = E.B;
    e = n;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
    e = null;
    e = undefined;
    e = 1;
    e = 1.;
    e = 1.0;
    e = -1;
    ~
!!! error TS2322: Type '-1' is not assignable to type 'E'.